--- a/templates/report.html
+++ b/templates/report.html
@@ -16,7 +16,7 @@
 {% block content %}
 <h1>New Report</h1>
 <form action="/report/submit" method="post">
-  <input type="time" name="time"/>
+  <input type="datetime-local" name="time"/>
   <label for="time">Time</label><br/>
   <input type="checkbox" name="pee"/>
   <label for="pee">Pee</label><br/>
@@ -26,9 +26,9 @@
   <label for="feeding">Feeding</label><br/>
   <div id="amount-form">
     <label for="amount">Amount (mL)</label><br/>
-    <input type="number" value="amount"><br/>
+    <input type="number" name="amount"><br/>
   </div>
-  <input type="checkbox" value="pump">
+  <input type="checkbox" name="pump">
   <label for="pump">Pump</label><br/>
   <input type="submit" value="submit">
   
