--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
 
   <body>
     <nav class="nav">
-      <a href="/" class="main-button"><strong>Levi</strong></a>
+        <a href="/" class="main-button"><strong>{{name}}</strong></a>
       <div class="vl"/>
       <a href="/report">Report</a>
     </nav>
